--- a/Jenkins-playbook.yml
+++ b/Jenkins-playbook.yml
@@ -17,7 +17,7 @@
         
   - name: Add Jenkins repo
     ansible.builtin.apt_repository:
-      repo: "deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc]" https://pkg.jenkins.io/debian-stable binary/
+      repo: deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian-stable binary/
       state: present
       filename: jenkins.list  
 
