--- a/Jenkins-playbook.yml
+++ b/Jenkins-playbook.yml
@@ -1,44 +1,31 @@
----
-- name: Install jenkins
-  hosts: localhost
-  become: yes
-  become_user: root
-
+- hosts: all
   tasks:
-  - name: Update all packages to their latest version
-    apt:
-      name: "*"
-      state: latest
+    - name: setting up jenkins repo
+      apt_repository:
+        repo: "deb https://pkg.jenkins.io/debian-stable binary/"
+        state: present
+        filename: jenkins
+    
+    - name: downloading jenkins key
+      apt_key:
+        url: https://pkg.jenkins.io/debian-stable/jenkins.io.key
+        state: present
 
-  - name: download jenkins key
-    ansible.builtin.get_url:
-      url: https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key
-      dest: /usr/share/keyrings/jenkins-keyring.asc
-        
-  - name: Add Jenkins repo
-    ansible.builtin.apt_repository:
-      repo: deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian-stable binary/
-      state: present
-      filename: jenkins.list  
+    - name: updating apt
+      apt:
+        update_cache: yes
 
-  - name: Update all packages to their latest version
-    apt:
-      name: "*"
-      state: latest
+    - name: installing openjdk software
+      apt:
+        name: openjdk-8-jdk
+        state: present
 
-  - name: Install fontconfig
-    shell: apt install fontconfig -y    
+    - name: installing jenkins software
+      apt:
+        name: jenkins
+        state: present
 
-  - name: Install java
-    shell: apt install fontconfig openjdk-17-jre -y  
-
-  - name: Install the Jenkins
-    ansible.builtin.apt:
-      name: jenkins
-      state: present  
-
-  - name: Make sure a service unit is running
-    ansible.builtin.systemd:
-      state: started
-      name: jenkins
-      enabled: yes    
+    - name: start the service
+      service:
+        name: jenkins
+        state: started
