--- a/Jenkins-playbook.yml
+++ b/Jenkins-playbook.yml
@@ -18,10 +18,10 @@
     - name: Add Jenkins repository key
       become: true
       shell: curl -fsSL https://pkg.jenkins.io/debian/jenkins.io-2023.key | sudo tee /usr/share/keyrings/jenkins-keyring.asc > /dev/null
-    
+
     - name: Add Jenkins repository to sources.list.d
       become: true
-      shell: echo "deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian binary/" | sudo tee /etc/apt/sources.list.d/jenkins.list > /de>
+      shell: echo "deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian binary/" | sudo tee /etc/apt/sources.list.d/jenkins.list > /dev/null
 
     - name: Install fontconfig and openjdk-17-jre
       become: true
