--- a/Jenkins-playbook.yml
+++ b/Jenkins-playbook.yml
@@ -1,45 +1,42 @@
 ---
-- name: Install Jenkins
+- name: Install jenkins
   hosts: localhost
   become: yes
   become_user: root
 
   tasks:
-    - name: Install dependencies
-      apt:
-        name:
-          - apt-transport-https
-          - ca-certificates
-          - curl
-          - gnupg
-          - software-properties-common
-          - wget
+  - name: Update all packages to their latest version
+    apt:
+      name: "*"
+      state: latest
 
-    - name: Add Jenkins repository key
-      become: true
-      shell: curl -fsSL https://pkg.jenkins.io/debian/jenkins.io-2023.key | sudo tee /usr/share/keyrings/jenkins-keyring.asc > /dev/null
+  - name: download jenkins key
+    ansible.builtin.get_url:
+      url: https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key
+      dest: /usr/share/keyrings/jenkins-keyring.asc
 
-    - name: Add Jenkins repository to sources.list.d
+  - name: Add Jenkins repository to sources.list.d
       become: true
       shell: echo "deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian binary/" | sudo tee /etc/apt/sources.list.d/jenkins.list > /dev/null
 
-    - name: Install fontconfig and openjdk-17-jre
-      become: true
-      apt:
-        name:
-          - fontconfig
-          - openjdk-17-jre
-        state: present
+  - name: Update all packages to their latest version
+    apt:
+      name: "*"
+      state: latest
 
-    - name: Install Jenkins
-      become: true
-      apt:
-        name: jenkins
-        state: present
+  - name: Install fontconfig
+    shell: apt install fontconfig -y    
 
-    - name: Enable Jenkins service
-      become: true
-      systemd:
-        name: jenkins
-        enabled: yes
-        state: started
+  - name: Install java
+    shell: apt install fontconfig openjdk-17-jre -y  
+
+  - name: Install the Jenkins
+    ansible.builtin.apt:
+      name: jenkins
+      state: present  
+
+  - name: Make sure a service unit is running
+    ansible.builtin.systemd:
+      state: started
+      name: jenkins
+      enabled: yes    
