--- a/Jenkins-playbook.yml
+++ b/Jenkins-playbook.yml
@@ -1,42 +1,53 @@
 ---
-- name: Install jenkins
+- name: Install Jenkins
   hosts: localhost
   become: yes
-  become_user: root
-
   tasks:
-  - name: Update all packages to their latest version
-    apt:
-      name: "*"
-      state: latest
+    - name: Install dependencies
+      apt:
+        name:
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - gnupg
+          - software-properties-common
+          - wget
+        state: present
 
-  - name: download jenkins key
-    ansible.builtin.get_url:
-      url: https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key
-      dest: /usr/share/keyrings/jenkins-keyring.asc
+    - name: Add Jenkins repository key
+      apt_key:
+        url: https://pkg.jenkins.io/debian/jenkins.io.key
+        state: present
 
-  - name: Add Jenkins repository to sources.list.d
-    become: true
-    shell: echo "deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian binary/" | sudo tee /etc/apt/sources.list.d/jenkins.list > /dev/null
+    - name: Add Jenkins repository to sources.list.d
+      apt_repository:
+        repo: "deb https://pkg.jenkins.io/debian binary/"
+        state: present
+        filename: jenkins
 
-  - name: Update all packages to their latest version
-    apt:
-      name: "*"
-      state: latest
+    - name: Update Ubuntu packages cache after adding repository
+      apt:
+        update_cache: yes
 
-  - name: Install fontconfig
-    shell: apt install fontconfig -y    
+    - name: Install fontconfig and openjdk-17-jre
+      apt:
+        name:
+          - fontconfig
+          - openjdk-17-jre
+        state: present
 
-  - name: Install java
-    shell: apt install fontconfig openjdk-17-jre -y  
+    - name: Install Jenkins
+      apt:
+        name: jenkins
+        state: present
 
-  - name: Install the Jenkins
-    ansible.builtin.apt:
-      name: jenkins
-      state: present  
+    - name: Set permissions for /var/run/docker.sock
+      file:
+        path: /var/run/docker.sock
+        mode: "0666"
 
-  - name: Make sure a service unit is running
-    ansible.builtin.systemd:
-      state: started
-      name: jenkins
-      enabled: yes    
+    - name: Enable and start Jenkins service
+      systemd:
+        name: jenkins
+        enabled: yes
+        state: started
