--- a/Jenkins-playbook.yml
+++ b/Jenkins-playbook.yml
@@ -1,53 +1,45 @@
 ---
-- name: Install Jenkins
+- name: Install jenkins
   hosts: localhost
   become: yes
+  become_user: root
+
   tasks:
-    - name: Install dependencies
-      apt:
-        name:
-          - apt-transport-https
-          - ca-certificates
-          - curl
-          - gnupg
-          - software-properties-common
-          - wget
-        state: present
+  - name: Install dependencies
+    apt:
+      name:
+        - apt-transport-https
+        - ca-certificates
+        - curl
+        - gnupg
+        - software-properties-common
+        - wget
 
-    - name: Add Jenkins repository key
-      apt_key:
-        url: https://pkg.jenkins.io/debian/jenkins.io.key
-        state: present
+  - name: Add Jenkins repository key
+    become: true
+    shell: curl -fsSL https://pkg.jenkins.io/debian/jenkins.io-2023.key | sudo tee /usr/share/keyrings/jenkins-keyring.asc > /dev/null
 
-    - name: Add Jenkins repository to sources.list.d
-      apt_repository:
-        repo: "deb https://pkg.jenkins.io/debian binary/"
-        state: present
-        filename: jenkins
+  - name: Add Jenkins repository to sources.list.d
+    become: true
+    shell: echo "deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian binary/" | sudo tee /etc/apt/sources.list.d/jenkins.list > /dev/null
 
-    - name: Update Ubuntu packages cache after adding repository
-      apt:
-        update_cache: yes
+  - name: Update Ubuntu packages cache after adding repository
+    apt:
+      update_cache: yes
 
-    - name: Install fontconfig and openjdk-17-jre
-      apt:
-        name:
-          - fontconfig
-          - openjdk-17-jre
-        state: present
+  - name: Install fontconfig and openjdk-17-jre
+    become: true
+    shell: sudo apt-get install -y fontconfig openjdk-17-jre
 
-    - name: Install Jenkins
-      apt:
-        name: jenkins
-        state: present
+  - name: Install Jenkins
+    become: true
+    apt:
+      name: jenkins
+      state: present
 
-    - name: Set permissions for /var/run/docker.sock
-      file:
-        path: /var/run/docker.sock
-        mode: "0666"
-
-    - name: Enable and start Jenkins service
-      systemd:
-        name: jenkins
-        enabled: yes
-        state: started
+  - name: Enable Jenkins service
+    become: true
+    systemd:
+      name: jenkins
+      enabled: yes
+      state: started
