--- a/Jenkins-playbook.yml
+++ b/Jenkins-playbook.yml
@@ -32,6 +32,10 @@
     become: true
     shell: sudo apt-get install -y fontconfig openjdk-17-jre
 
+  - name: Update package cache
+      apt:
+        update_cache: yes
+
   - name: Install Jenkins
     become: true
     apt:
